--- a/Atelier.Application/Atelier.Application.csproj
+++ b/Atelier.Application/Atelier.Application.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Services\Users\Commands\" />
+    <Folder Include="Services\Customers\Queries\" />
     <Folder Include="Services\Users\Queries\GetAllUser\" />
   </ItemGroup>
 
@@ -27,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Atelier.Common\Atelier.Common.csproj" />
     <ProjectReference Include="..\Atelier.Domain\Atelier.Domain.csproj" />
   </ItemGroup>
 
