--- a/Atelier.Application/Atelier.Application.csproj
+++ b/Atelier.Application/Atelier.Application.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Services\Branches\Commands\" />
+    <Folder Include="Services\Customers\Commands\" />
     <Folder Include="Services\Customers\Queries\" />
     <Folder Include="Services\Users\Queries\GetAllUser\" />
   </ItemGroup>
