--- a/Atelier.Application/Atelier.Application.csproj
+++ b/Atelier.Application/Atelier.Application.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Services\Auth\Queries\" />
     <Folder Include="Services\Customers\Commands\" />
     <Folder Include="Services\Customers\Queries\" />
   </ItemGroup>
