--- a/EndPointAPI/EndPointAPI.csproj
+++ b/EndPointAPI/EndPointAPI.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\Atelier.Persistence\Atelier.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MongoDockerData\" />
+  </ItemGroup>
+
 </Project>
