--- a/EndPointAPI/appsettings.json
+++ b/EndPointAPI/appsettings.json
@@ -10,6 +10,13 @@
   "ConnectionStrings": {
     "SqlCon": "Data Source=5.9.192.37,2019;Initial Catalog=AtelierDb;Persist Security Info=True;User ID=atelieruser;Password=c8!13bV7ec8!13bV7e; MultipleActiveResultSets=True;App=EntityFramework&quot;TrustServerCertificate=True"
   },
+  "ServiceSettings": {
+    "ServiceName": "AtelierCollection"
+  },
+  "MongoDbSettings": {
+    "Host": "localhost",
+    "port": "27017"
+  },
   "JWtConfig": {
     "key": "{16D9BBF8-FA00-4D89-9BB5-99610E95BA70}",
     "issuer": "karg.com",
