--- a/Atelier.Application/Atelier.Application.csproj
+++ b/Atelier.Application/Atelier.Application.csproj
@@ -25,6 +25,7 @@
     <Folder Include="Services\Banks\Queries\" />
     <Folder Include="Services\Customers\Commands\" />
     <Folder Include="Services\Customers\Queries\" />
+    <Folder Include="Services\AtelierServi\" />
   </ItemGroup>
 
   <ItemGroup>
