mongo change filder

--- a/.gitignore
+++ b/.gitignore
@@ -396,19 +396,22 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-/EndPointStore/obj/Debug/net7.0/EndPointStore.assets.cache
-/EndPointStore/obj/Debug/net7.0/EndPointStore.csproj.AssemblyReference.cache
-/EndPointStore/obj/Debug/net7.0/EndPointStore.GeneratedMSBuildEditorConfig.editorconfig
-/EndPointStore/obj/Debug/net7.0/project.razor.vs.json
-/EndPointStore/obj/EndPointStore.csproj.nuget.dgspec.json
-/EndPointStore/obj/EndPointStore.csproj.nuget.g.props
-/EndPointStore/obj/project.assets.json
-/EndPointStore/obj/project.nuget.cache
-/Store.Application/obj/project.assets.json
-/Store.Application/obj/project.nuget.cache
-/Store.Application/obj/Store.Application.csproj.nuget.dgspec.json
-/Store.Application/obj/Store.Application.csproj.nuget.g.targets
-/Store.Application/obj/Store.Application.csproj.nuget.g.props
-/.vs/Store/v17/.suo
-/.vs/Store/FileContentIndex/0b8216c2-845e-4ffe-a67e-e1f44fabd083.vsidx
-/.vs/Store/FileContentIndex/cc20f175-8970-44c2-ac93-00a4f5094831.vsidx
+/EndPointAPI/obj/Debug/net7.0/EndPointAPI.assets.cache
+/EndPointAPI/obj/Debug/net7.0/EndPointAPI.csproj.AssemblyReference.cache
+/EndPointAPI/obj/Debug/net7.0/EndPointAPI.GeneratedMSBuildEditorConfig.editorconfig
+/EndPointAPI/obj/Debug/net7.0/project.razor.vs.json
+/EndPointAPI/obj/EndPointAPI.csproj.nuget.dgspec.json
+/EndPointAPI/obj/EndPointAPI.csproj.nuget.g.props
+/EndPointAPI/obj/project.assets.json
+/EndPointAPI/obj/project.nuget.cache
+/EndPointAPI/MongoDockerData/*
+
+
+/Atelier.Application/obj/project.assets.json
+/Atelier.Application/obj/project.nuget.cache
+/Atelier.Application/obj/Atelier.Application.csproj.nuget.dgspec.json
+/Atelier.Application/obj/Atelier.Application.csproj.nuget.g.targets
+/Atelier.Application/obj/Atelier.Application.csproj.nuget.g.props
+/.vs/Atelier/v17/.suo
+/.vs/Atelier/FileContentIndex/0b8216c2-845e-4ffe-a67e-e1f44fabd083.vsidx
+/.vs/Atelier/FileContentIndex/cc20f175-8970-44c2-ac93-00a4f5094831.vsidx
