--- a/EndPointAPI/docker-compose.yml
+++ b/EndPointAPI/docker-compose.yml
@@ -1,25 +1,33 @@
-﻿version: '3'
+﻿version: '3.7'
+
 services:
   mongo1:
-    image: mongo
+    image: mongo:7
+    command: mongod --replSet myReplicaSet --bind_ip localhost,mongo1
     ports:
       - "27017:27017"
-    volumes:
-      - C:/MongoDockerData/mongo1:/data/db
-    command: --replSet rs0
+    networks:
+      - mongoCluster
+    restart: always
 
   mongo2:
-    image: mongo
+    image: mongo:7
+    command: mongod --replSet myReplicaSet --bind_ip localhost,mongo2
     ports:
       - "27018:27017"
-    volumes:
-      - C:/MongoDockerData/mongo2:/data/db
-    command: --replSet rs0
+    networks:
+      - mongoCluster
+    restart: always
 
   mongo3:
-    image: mongo
+    image: mongo:7
+    command: mongod --replSet myReplicaSet --bind_ip localhost,mongo3
     ports:
       - "27019:27017"
-    volumes:
-      - C:/MongoDockerData/mongo3:/data/db
-    command: --replSet rs0
+    networks:
+      - mongoCluster
+    restart: always
+
+networks:
+  mongoCluster:
+    driver: bridge
