fix mongo docker2

--- a/EndPointAPI/docker-compose.yml
+++ b/EndPointAPI/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     command: mongod --replSet myReplicaSet --bind_ip localhost,mongo1
     ports:
       - "27017:27017"
+    volumes:
+      - C:/MongoDockerData/mongo1:/data/db
     networks:
       - mongoCluster
     restart: always
@@ -15,6 +17,8 @@ services:
     command: mongod --replSet myReplicaSet --bind_ip localhost,mongo2
     ports:
       - "27018:27017"
+    volumes:
+      - C:/MongoDockerData/mongo2:/data/db
     networks:
       - mongoCluster
     restart: always
@@ -24,6 +28,8 @@ services:
     command: mongod --replSet myReplicaSet --bind_ip localhost,mongo3
     ports:
       - "27019:27017"
+    volumes:
+      - C:/MongoDockerData/mongo3:/data/db
     networks:
       - mongoCluster
     restart: always
