--- a/Atelier.Application/Atelier.Application.csproj
+++ b/Atelier.Application/Atelier.Application.csproj
@@ -26,6 +26,7 @@
     <Folder Include="Services\Customers\Commands\" />
     <Folder Include="Services\Customers\Queries\" />
     <Folder Include="Services\AtelierServi\" />
+    <Folder Include="Services\Documents\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
